--- a/chara.html
+++ b/chara.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>あなたの価値観測定</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"  />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous"> 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
+    integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 
   <style>
     body {
       -webkit-print-color-adjust: exact;
     }
-    
+
     .card {
       width: 100%;
       height: 100px;
@@ -25,22 +26,32 @@
     .card-remover {
       color: gray;
       font-weight: bold;
-      font-size: 2em;
+      font-size: 100%;
       top: 0;
       right: 0;
       position: absolute;
       margin: 5px;
-      z-index: 100;
     }
+
     .card:hover {
       background-color: #feecf0;
       color: red;
       transition: all 0.1s;
-
     }
 
-    .ph1 {
-      border: dotted 2px skyblue;
+    /* 印刷しない */
+    @media print {
+      @page {
+        margin: 0;
+      }
+
+      body {
+        margin: 0.5cm;
+      }
+
+      .noPrint {
+        display: none;
+      }
     }
   </style>
   <script>
@@ -51,6 +62,7 @@
     cards = cards.sort(function () { return Math.random() - 0.5 });
 
     var hand_number = 6; // 初期手札の枚数
+    var cardTotalNumber = cards.length - hand_number; // デッキにあるカード枚数
 
     // n番目(index)のcardの文字を返却し、cards配列空要素を削除する
     function getCard(n) {
@@ -61,27 +73,40 @@
 
     // jQuery
     $(function () {
+
+      // カードを1枚引く
       function setCardToPool() {
+        // デッキにカードがない場合は処理をしない
         if (cards.length < 1) { return };
-        console.log($('#cards > .column').length)
+        // カードがhand_number - 1よりも存在したら、カードをひかない
         if ($('#cards .column').length > hand_number - 1) { return };
 
-        $("#cards").append("<div class='column is-2'><div class='card box'><span class='card-remover pool'><i class='fas fa-times-circle'></i></span>" + getCard(0) + "</div></div>");
+        // カード枚数の表示
+        $(".card-now-number").text(cards.length - 1);
+        $("#cards").append("<div class='column is-2'><div class='card box'><span class='card-remover pool noPrint'><i class='fas fa-times-circle'></i></span>" + getCard(0) + "</div></div>");
       }
+
+      // カード枚数の表示
+      $(".card-total-number").text(cardTotalNumber);
 
       // hand_numberの数だけカードを表示する
       for (var i = 0; i < hand_number; i++) {
         setCardToPool()
       };
 
-      $('#cards').sortable({
-        opacity: 0.5,
-        placeholder: "ph1",
+      // 説明がクリックされた時の処理
+      $(document).on('click', '.how-to-use', function () {
+        $(".modal-how-to-use").addClass("is-active");
       });
-      $('#drops').sortable({
-        opacity: 0.5,
-        placeholder: "ph1",
+      $(document).on('click', '.modal-close, .modal-background', function () {
+        $(".modal-how-to-use").removeClass("is-active");
       });
+
+      // カードをマウス操作できるように設定
+      $('.sortable').sortable({
+        connectWith: '.sortable'
+      });
+      $('.sortable').disableSelection();
 
       // ボタンをクリックしたらカードを入れ替える(プールしているもの)
       $(document).on('click', '.pool', function () {
@@ -95,34 +120,80 @@
       $(document).on('click', '.drop-pool', function () {
         $(this).addClass('pool');
         $(this).removeClass('drop-pool');
-        $("#cards").prepend($(this).parent().parent());
+        $("#cards").append($(this).parent().parent());
       });
     });
   </script>
 </head>
 
 <body>
+  <nav class="navbar noPrint" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="#">
+        <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+      </a>
+    </div>
+
+    <div id="navbar" class="navbar-menu">
+      <div class="navbar-start"></div>
+
+      <div class="navbar-end">
+        <div class="navbar-item">
+          <div class="buttons">
+            <a class="button is-primary how-to-use data-target='my-modal'">
+              <strong>使い方</strong>
+            </a>
+            <input type="button" class="button is-light" onclick="window.print();" value="PDF出力">
+          </div>
+        </div>
+      </div>
+    </div>
+  </nav>
+  <div class="modal modal-how-to-use">
+    <div class="modal-background"></div>
+    <div class="modal-content">
+      <article class="message is-info">
+        <div class="message-header">
+          <p>使い方</p>
+        </div>
+        <div class="message-body py-3">
+          <p class="is-size-4 py-3">はじめに</p>
+          <p class="py-3"><strong>「あなたが働く上で大事にしている価値観」</strong>を探すお手伝いをします。</p>
+          <p class="is-size-4 py-3">操作方法</p>
+          <p class="py-3">「あなたが大事にしている価値観」の下にあるカードのうち、自分が働く上で一番重要ではないと思うカードを選び「×」を押してください。すると次のカードが補充されます。</p>
+          <p class="py-3">
+            これを繰り返すことでカードが入れ替わっていきます。手札が5枚になるようにカードを捨てていき、残りのカード枚数が0になったら終わりです。
+          </p>
+          <p class="py-3">その時の手札が<strong>「あなたが働く上で大事にしている価値観」</strong>となります。</p>
+          <p class="is-size-4 py-3">感謝</p>
+          <p class="py-3">このアプリの価値観は、<br>サイボウズ様の<strong>「ちがうトランプ(体験版)」</strong>から引用させていただいております</p>
+        </div>
+    </div>
+    <button class="modal-close is-large" aria-label="close"></button>
+  </div>
+
+  </div>
   <header class="hero level is-info is-bold">
     <div class="hero-body">
       <div class="container">
         <h1 class="title">あなたの価値観測定</h1>
       </div>
-      <div class="level-right">
-        <div class="level-item">
-          <input type="button" class="button is-greylight" value="結果をPDFに出力する"  onclick="window.print();"/>
-        </div>
-      </div>
     </div>
   </header>
 
   <section class="box menu has-background-success-light">
-    <p class="menu-label is-size-4">あなたが大事にしている価値観</p>
+    <p class="menu-label is-size-4">あなたが大事にしている価値観 (残りカード枚数 : <span class="card-now-number">0</span>/<span
+        class="card-total-number">0</span>枚)</p>
   </section>
-  <main class="columns is-multiline mx-3" id="cards"></main>
-  <section class="box menu has-background-danger-light">
+  <nav class="pagination is-centered mx-3">
+    <span><i class="fa fa-arrow-left"></i> 優先度(高)</span>
+    <span>優先度(低) <i class="fa fa-arrow-right"></i></span>
+  </nav>
+  <main class="columns is-multiline mx-3 sortable" id="cards"></main>
+  <section class="box menu has-background-info-light">
     <p class="menu-label is-size-4">捨てたカード一覧</p>
   </section>
-  <div class="columns is-multiline mx-3" id="drops"></div>
+  <div class="columns is-multiline mx-3 sortable" id="drops"></div>
 </body>
 
 </html>
